Update SDK version in pubspec.yaml to ^3.2.0

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.2
 homepage: https://github.com/triplehman3563/collapsible_row
 
 environment:
-  sdk: ">=3.0.0"
+  sdk: '^3.2.0'
   flutter: ">=3.0.0"
 
 dependencies:
